--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   conditional_builder: ^1.0.2
   bloc: ^7.0.0
   flutter_bloc: ^7.0.1
+  dio: ^3.0.10
+  hexcolor: ^2.0.3
+  shared_preferences: ^2.0.6
+  webview_flutter: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -65,12 +69,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Pacifico
-      fonts:
-        - asset: fonts/Pacifico-Regular.ttf
-        - asset: fonts/Schyler-Italic.ttf
-          style: italic
+  # fonts:
+  #   - family: Pacifico
+  #     fonts:
+  #       - asset: fonts/Pacifico-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
